test/src/e2e_vm_tests/test_programs/should_fail/const_after_var_with_same_name/src/main.sw
script;


fn main() -> u64 {
    let X = 5;
    const X = 5;
    X
}
